syntax = "proto3";
package qmtl;

// Analyzer 관련 메시지 (v1.0.0)
// 변경 이력: 최초 생성 2025-05-20

message AnalyzerDefinition {
  string name = 1;
  optional string description = 2;
  repeated string tags = 3;
  string source = 4;
  map<string, string> parameters = 5;
}

message AnalyzerMetadata {
  string analyzer_id = 1;
  string name = 2;
  optional string description = 3;
  repeated string tags = 4;
  int64 created_at = 5;
  string status = 6;
  map<string, string> parameters = 7;
}

message AnalyzerResult {
  string analyzer_id = 1;
  map<string, string> result = 2;
  int64 generated_at = 3;
  string status = 4;
  optional string error = 5;
}
